--- a/app2/Jenkinsfile
+++ b/app2/Jenkinsfile
@@ -9,9 +9,8 @@ pipeline {
                 script{
 
                         sshagent(['4e968561-dbf8-444b-881f-529ca5b87d91']) {
-                            sh '''
-                            ssh shihab@192.168.1.10 "echo "server running....""
-                            '''
+                            sh "ssh shihab@192.168.1.10 'echo server running....'"
+                            
                
                         }
               
