--- a/app2/Jenkinsfile
+++ b/app2/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
                 script{
 
                         sshagent(credentials:['4e968561-dbf8-444b-881f-529ca5b87d91']) {
-                            sh "ssh shihab@192.168.1.10 'echo server running....'"
+                            sh "ssh -o StrictHostKeyChecking=no shihab@192.168.1.10 'echo server running....'"
                             
                
                         }
