--- a/app1/Jenkinsfile
+++ b/app1/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
             steps {
                 script{
 
-                        sshagent(['4e968561-dbf8-444b-881f-529ca5b87d91']) {
+                        sshagent(credentials:['4e968561-dbf8-444b-881f-529ca5b87d91']) {
                             sh '''
                             ssh shihab@192.168.1.10 "echo "server running....""
                             '''
